--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
+    "envalid": "^8.0.0",
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
     "pino": "^8.15.1",
