--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.2",
     "pino": "^8.15.1",
     "zod": "^3.22.2"
